App name Fonts editing

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -28,3 +28,8 @@ body {
   box-shadow: 0px 1px 3px grey;
 
 }
+
+.navbar-inverse .navbar-brand {
+  color: #FC2A00;
+  font-family: 'chunkfiveroman', sans-serif;
+}
